[gd_scene load_steps=12 format=2]

[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Enemy2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/LevelScripts/LevelScripts/Level4Script.gd" type="Script" id=3]
[ext_resource path="res://Actors/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/NextLevelItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/ActorScripts/BamboozleEfect.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ActorScripts/KillPowerUpScript.gd" type="Script" id=7]
[ext_resource path="res://Actors/PowerUp.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/ActorScripts/PowerUp4a.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.74048, 10 )

[sub_resource type="QuadMesh" id=2]

[node name="Level4" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 452, 85 )
scale = Vector2( 1, 1 )

[node name="Emenies" type="Node2D" parent="."]

[node name="Enemy" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 338, 253 )
rotation = 0.523598
scale = Vector2( 0.751488, 16.7603 )

[node name="Enemy3" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 414, 277 )
rotation = 0.523598
scale = Vector2( 0.751488, 17.637 )

[node name="Enemy9" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 451, 470 )
rotation = -1.57079
scale = Vector2( 0.551488, 4.75699 )

[node name="Enemy10" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 371, 453 )
rotation = -1.0472
scale = Vector2( 0.551488, 5.397 )

[node name="Enemy11" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 666, 473 )
rotation = -1.57079
scale = Vector2( 0.551488, 3.677 )

[node name="Enemy5" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 603, 303 )
rotation = -0.523598
scale = Vector2( 0.751488, 19.7387 )

[node name="Enemy2" parent="Emenies" instance=ExtResource( 2 )]
position = Vector2( 449, 545 )
rotation = 1.57079
scale = Vector2( 0.951488, 28.5717 )

[node name="Enemy4" parent="Emenies" instance=ExtResource( 4 )]
position = Vector2( 501, 154 )

[node name="Enemy8" parent="Emenies" instance=ExtResource( 4 )]
position = Vector2( 212, 508 )

[node name="Enemy6" parent="Emenies" instance=ExtResource( 4 )]
position = Vector2( 420, 332 )

[node name="Enemy7" parent="Emenies" instance=ExtResource( 4 )]
position = Vector2( 414, 493 )
scale = Vector2( 1, 1 )

[node name="Environment" type="Node2D" parent="."]

[node name="Wall" type="StaticBody2D" parent="Environment"]
position = Vector2( 300, 294 )
rotation = 0.523598
scale = Vector2( 0.396963, -30.372 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall4" type="StaticBody2D" parent="Environment"]
position = Vector2( 409, 273 )
rotation = 0.523598
scale = Vector2( 0.396963, -18.6906 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall4"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall4"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall5" type="StaticBody2D" parent="Environment"]
position = Vector2( 359, 454 )
rotation = -1.0472
scale = Vector2( 0.396963, -4.68444 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall5"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall5"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="Environment"]
position = Vector2( 603, 293 )
rotation = -0.523599
scale = Vector2( 0.396963, -30.372 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall2"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall2"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall3" type="StaticBody2D" parent="Environment"]
position = Vector2( 453, 553 )
rotation = -1.57079
scale = Vector2( 0.396963, -30.372 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall3"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall3"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall6" type="StaticBody2D" parent="Environment"]
position = Vector2( 641, 479 )
rotation = -1.57079
scale = Vector2( 0.396963, -7.13272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall6"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall6"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall7" type="StaticBody2D" parent="Environment"]
position = Vector2( 449, 477 )
rotation = -1.57079
scale = Vector2( 0.396963, -5.21272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall7"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall7"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall8" type="StaticBody2D" parent="Environment"]
position = Vector2( 502, 392 )
rotation = -3.14159
scale = Vector2( 0.396963, -8.84793 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall8"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall8"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Wall9" type="StaticBody2D" parent="Environment"]
position = Vector2( 552, 397 )
rotation = -3.40339
scale = Vector2( 0.396963, -8.84793 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Wall9"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment/Wall9"]
modulate = Color( 0, 0.368627, 1, 1 )
scale = Vector2( 20, 20 )
mesh = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 144.005, 0 )
anchor_mode = 0
zoom = Vector2( 0.603, 1 )

[node name="TruthfulImpostorNextLevelItem" parent="." instance=ExtResource( 5 )]
position = Vector2( 599, 453 )
script = ExtResource( 7 )

[node name="PowerUp" parent="." instance=ExtResource( 8 )]
position = Vector2( 481, 448 )
scale = Vector2( 1, 1 )
script = ExtResource( 9 )

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 579, 508 )
script = ExtResource( 6 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LooseUI" type="Control" parent="UI"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 80.0

[node name="LooseText" type="Panel" parent="UI/LooseUI"]
margin_left = 361.0
margin_top = 82.0
margin_right = 458.0
margin_bottom = 122.0
rect_scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="UI/LooseUI/LooseText"]
margin_right = 97.0
margin_bottom = 42.0
text = "Game Over"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="UI/LooseUI"]
margin_left = 390.0
margin_top = 250.0
margin_right = 460.0
margin_bottom = 270.0
rect_scale = Vector2( 2, 2 )
text = "Retry"
icon_align = 1

[node name="BackToMainMenuButton" type="Button" parent="UI/LooseUI"]
margin_left = 338.0
margin_top = 332.0
margin_right = 462.0
margin_bottom = 352.0
rect_scale = Vector2( 2, 2 )
text = "BackToMainMenu"
icon_align = 1

[node name="QuitButton" type="Button" parent="UI/LooseUI"]
margin_left = 348.0
margin_top = 409.0
margin_right = 460.0
margin_bottom = 429.0
rect_scale = Vector2( 2, 2 )
text = "Quit to desktop"
icon_align = 1

[node name="WinScreen" type="Control" parent="UI"]
visible = false
margin_top = -43.0
margin_right = 40.0
margin_bottom = -3.0

[node name="Panel" type="Panel" parent="UI/WinScreen"]
margin_left = 355.0
margin_top = 168.0
margin_right = 655.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="UI/WinScreen/Panel"]
margin_right = 100.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
text = "Level Complete"
align = 1
valign = 1

[node name="NextLevelButton" type="Button" parent="UI/WinScreen"]
margin_left = 429.0
margin_top = 296.0
margin_right = 509.0
margin_bottom = 316.0
rect_scale = Vector2( 2, 2 )
text = "Next Level"
icon_align = 1

[node name="ReplayLevelButton" type="Button" parent="UI/WinScreen"]
margin_left = 420.0
margin_top = 362.0
margin_right = 508.0
margin_bottom = 382.0
rect_scale = Vector2( 2, 2 )
text = "ReplayLevel"
icon_align = 1

[node name="BackToMainMenuButton" type="Button" parent="UI/WinScreen"]
margin_left = 380.0
margin_top = 427.0
margin_right = 504.0
margin_bottom = 447.0
rect_scale = Vector2( 2, 2 )
text = "BackToMainMenu"
icon_align = 1

[node name="QuitButton" type="Button" parent="UI/WinScreen"]
margin_left = 394.0
margin_top = 492.0
margin_right = 506.0
margin_bottom = 512.0
rect_scale = Vector2( 2, 2 )
text = "Quit to desktop"
icon_align = 1

[connection signal="body_entered" from="Emenies/Enemy" to="Emenies/Enemy" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy3" to="Emenies/Enemy3" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy3" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy3" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy9" to="Emenies/Enemy9" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy9" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy9" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy10" to="Emenies/Enemy10" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy10" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy10" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy11" to="Emenies/Enemy11" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy11" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy11" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy5" to="Emenies/Enemy5" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy5" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy5" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy2" to="Emenies/Enemy2" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy2" to="." method="_on_Enemy_end_game"]
[connection signal="end_game" from="Emenies/Enemy2" to="Player" method="_on_Enemy_end_game"]
[connection signal="body_entered" from="Emenies/Enemy4" to="Emenies/Enemy4" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy4" to="." method="_on_Enemy4_end_game"]
[connection signal="end_game" from="Emenies/Enemy4" to="Player" method="_on_Enemy4_end_game"]
[connection signal="body_entered" from="Emenies/Enemy8" to="Emenies/Enemy8" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy8" to="." method="_on_Enemy4_end_game"]
[connection signal="end_game" from="Emenies/Enemy8" to="Player" method="_on_Enemy8_end_game"]
[connection signal="body_entered" from="Emenies/Enemy6" to="Emenies/Enemy6" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy6" to="." method="_on_Enemy4_end_game"]
[connection signal="end_game" from="Emenies/Enemy6" to="Player" method="_on_Enemy6_end_game"]
[connection signal="body_entered" from="Emenies/Enemy7" to="Emenies/Enemy7" method="_on_Enemy_body_entered"]
[connection signal="end_game" from="Emenies/Enemy7" to="." method="_on_Enemy4_end_game"]
[connection signal="end_game" from="Emenies/Enemy7" to="Player" method="_on_Enemy7_end_game"]
[connection signal="body_entered" from="TruthfulImpostorNextLevelItem" to="TruthfulImpostorNextLevelItem" method="_on_TruthfulImpostorNextLevelItem_body_entered"]
[connection signal="end_choice" from="TruthfulImpostorNextLevelItem" to="." method="_on_TruthfulImpostorNextLevelItem_end_choice"]
[connection signal="body_entered" from="PowerUp" to="PowerUp" method="_on_PowerUp_body_entered"]
[connection signal="power_up4a" from="PowerUp" to="Player" method="_on_PowerUp_power_up4a"]
[connection signal="body_entered" from="Enemy3" to="Enemy3" method="_on_Enemy3_body_entered"]
[connection signal="cast_bamboozle_effect" from="Enemy3" to="." method="_on_Enemy3_cast_bamboozle_effect"]
[connection signal="pressed" from="UI/LooseUI/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="UI/LooseUI/BackToMainMenuButton" to="." method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="UI/LooseUI/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/WinScreen/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="UI/WinScreen/ReplayLevelButton" to="." method="_on_ReplayLevelButton_pressed"]
[connection signal="pressed" from="UI/WinScreen/BackToMainMenuButton" to="." method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="UI/WinScreen/QuitButton" to="." method="_on_QuitButton_pressed"]
